[package]
name = "arrayvec"
version = "0.7.6"
authors = ["bluss"]
license = "MIT OR Apache-2.0"
edition = "2021"
rust-version = "1.70"
resolver = "2"

description = "A vector with fixed capacity, backed by an array (it can be stored on the stack too). Implements fixed capacity ArrayVec and ArrayString."
documentation = "https://docs.rs/arrayvec/"
repository = "https://github.com/bluss/arrayvec"

keywords = ["stack", "vector", "array", "data-structure", "no_std"]
categories = ["data-structures", "no-std"]

[build-dependencies]

[dependencies]
borsh = { version = "1.2.0", optional = true, default-features = false }
serde = { version = "1.0", optional = true, default-features = false }
zeroize = { version = "1.4", optional = true, default-features = false }
# ETNA framework deps — optional, activated by the `etna` feature.
proptest = { version = "1.11.0", optional = true }
quickcheck_etna = { git = "https://github.com/alpaylan/quickcheck.git", branch = "master", package = "quickcheck", features = ["etna"], optional = true }
crabcheck = { git = "https://github.com/alpaylan/crabcheck.git", branch = "main", optional = true }
hegeltest = { version = "0.3.7", optional = true }
rand_etna = { package = "rand", version = "0.9", optional = true }

[dev-dependencies.serde_test]
version = "1.0"

[dev-dependencies]
matches = { version = "0.1" }
bencher = "0.1.4"

[[bench]]
name = "extend"
harness = false

[[bench]]
name = "arraystring"
harness = false

[features]
default = ["std"]
std = []

# ETNA integration: pulls in proptest/quickcheck/crabcheck/hegel for the etna runner.
etna = [
    "std",
    "dep:proptest",
    "dep:quickcheck_etna",
    "dep:crabcheck",
    "dep:hegeltest",
    "dep:rand_etna",
]

[profile.bench]
debug = true
[profile.release]
# ETNA: keep debug info + debug assertions so internal invariants panic and
# backtraces are usable when the runner catches.
lto = false
debug = true
debug-assertions = true

[package.metadata.docs.rs]
features = ["borsh", "serde", "zeroize"]

[package.metadata.release]
no-dev-version = true
tag-name = "{{version}}"

[[bin]]
name = "etna"
path = "src/bin/etna.rs"
required-features = ["etna"]

[[test]]
name = "etna_witnesses"
path = "tests/etna_witnesses.rs"
